修改座位个数

--- a/config.json
+++ b/config.json
@@ -14,32 +14,12 @@
   "seats": [
     {
       "id": 1,
-      "name": "座位1",
+      "name": "监控区域",
       "region": [
-        [100, 150],
-        [300, 150],
-        [300, 350],
-        [100, 350]
-      ]
-    },
-    {
-      "id": 2,
-      "name": "座位2",
-      "region": [
-        [350, 150],
-        [550, 150],
-        [550, 350],
-        [350, 350]
-      ]
-    },
-    {
-      "id": 3,
-      "name": "座位3",
-      "region": [
-        [600, 150],
-        [800, 150],
-        [800, 350],
-        [600, 350]
+        [200, 100],
+        [1000, 100],
+        [1000, 600],
+        [200, 600]
       ]
     }
   ],
