--- a/config.json
+++ b/config.json
@@ -8,13 +8,15 @@
     "rotation": 0
   },
   "detection": {
-    "motion_threshold": 3000,
+    "motion_threshold": 2000,
     "detection_interval": 0.1,
-    "back_sub_history": 500,
-    "back_sub_var_threshold": 16,
+    "back_sub_history": 300,
+    "back_sub_var_threshold": 10,
     "back_sub_var_threshold_gen": 9,
     "contour_aspect_ratio_min": 0.2,
-    "contour_aspect_ratio_max": 2.0
+    "contour_aspect_ratio_max": 2.0,
+    "upper_body_min_height_ratio": 0.3,
+    "upper_body_center_offset": 0.25
   },
   "seats": [
     {
