--- a/config.json
+++ b/config.json
@@ -8,16 +8,20 @@
     "rotation": 0
   },
   "detection": {
-    "motion_threshold": 2000,
-    "detection_interval": 0.1,
-    "back_sub_history": 300,
-    "back_sub_var_threshold": 10,
-    "back_sub_var_threshold_gen": 9,
-    "contour_aspect_ratio_min": 0.2,
-    "contour_aspect_ratio_max": 2.0,
-    "upper_body_min_height_ratio": 0.3,
-    "upper_body_center_offset": 0.25
-  },
+        "motion_threshold": 2000,
+        "detection_interval": 0.1,
+        "back_sub_history": 1000,
+        "back_sub_var_threshold": 20,
+        "back_sub_var_threshold_gen": 16,
+        "bg_learning_rate": 0.001,
+        "static_detection_enabled": true,
+        "static_person_min_area_ratio": 0.05,
+        "leave_detection_threshold": 30,
+        "contour_aspect_ratio_min": 0.2,
+        "contour_aspect_ratio_max": 2.0,
+        "upper_body_min_height_ratio": 0.3,
+        "upper_body_center_offset": 0.25
+    },
   "seats": [
     {
       "id": 1,
